Fix Icon Spacing

--- a/themes/airspace-hugo/assets/scss/templates/_contact.scss
+++ b/themes/airspace-hugo/assets/scss/templates/_contact.scss
@@ -58,7 +58,7 @@
 
   li {
     display: inline-block;
-    margin: 0 6px;
+    margin: 0 7.5px;
   }
 
   a {
@@ -72,8 +72,8 @@
   }
 
   svg {
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    height: 30px;
   }
 }
 
